Prevent message overflow.

--- a/stylesheets/chat-screen.css
+++ b/stylesheets/chat-screen.css
@@ -198,6 +198,7 @@
 
 .messageBody {
   padding-left: 10px;
+  overflow: hidden;
 }
 
 .messageBody p {
